--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="ui-challenges.html">UI Challenges</a>
-                            <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
+                            <a class="dropdown-item" href="ux-case-studies.html">UX Case Studies</a>
                             <a class="dropdown-item" href="developer-projects.html">Developer Projects</a>
                             <a class="dropdown-item" href="other-projects.html">Other Projects</a>
                         </div>
@@ -174,7 +174,7 @@
                                     <a href="ui-challenges.html" class="hvr-sweep-to-bottom"><span>UI Challenges</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-ux menu-item-dark ">
-                                    <a href="uxcasestudies.html" class="hvr-sweep-to-bottom"><span>UX Case Studies</span></a>
+                                    <a href="ux-case-studies.html" class="hvr-sweep-to-bottom"><span>UX Case Studies</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-code menu-item">
                                     <a href="developer-projects.html" class="hvr-sweep-to-bottom"><span>Developer Projects</span></a>
