--- a/other-projects.html
+++ b/other-projects.html
@@ -40,7 +40,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="ui-challenges.html">UI Challenges</a>
-                            <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
+                            <a class="dropdown-item" href="ux-case-studies.html">UX Case Studies</a>
                             <a class="dropdown-item" href="developer-projects.html">Developer Projects</a>
                             <a class="dropdown-item" href="other-projects.html">Other Projects</a>
                         </div>
