Add code credit for form on contact page and add content in credit section in readme file

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                             Get in touch 
                             </h1>
                             <!-- Content form heading end -->
-                            <!-- Form -->
+                            <!-- Form Code from Bootstrap -->
                             <form class="form-container">
                                 <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required="">
                                 <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required="">
