--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
                 <!-- Hero-image -->
 				<div class="row">
-					<img class="banner-image" src="./assets/images/franciska_du_toit_aboutpage_image.jpg"/>
+					<img class="banner-image" src="./assets/images/franciska_du_toit_aboutpage_image.jpg" alt="franciska du toit"/>
                 </div>
                 <!-- Hero-image end -->
                 <!-- Social Banner -->
