--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
                 <!-- Hero-image -->
 				<div class="row">
-					<img class="banner-image" src="./assets/images/franciska_du_toit_contactpage.jpg"/>
+					<img class="banner-image" src="./assets/images/franciska_du_toit_contactpage.jpg" alt="table with laptop, map and notebook"/>
                 </div>
                 <!-- Hero-image end -->
                 <div class="row banner-imager-social-contact " id="social-banner-hide-lg">
